@@ -275,7 +275,7 @@ BOOST_FIXTURE_TEST_CASE(testMonitor, CTestFixture) {
         BOOST_REQUIRE_EQUAL(std::size_t(0), m_ReportedModelSizeStats.s_AllocationFailures);
 
         // Set a soft-limit degraded status
-        mon.acceptPruningResult();
+        mon.startPruning();
 
         // This refresh should trigger a report
         mon.refresh(categorizer);
@@ -453,6 +453,16 @@ BOOST_FIXTURE_TEST_CASE(testPruning, CTestFixture) {
     // And finally that it grows again
     this->addTestData(bucket, BUCKET_LENGTH, 700, 0, startOffset, detector, monitor);
     BOOST_TEST_REQUIRE(monitor.m_PruneWindow > level);
+
+    // If it grows enough we will stop pruning and revert to memory status OK,
+    // and 7000 completely empty buckets (even without the all pervasive person)
+    // is the quickest way to achieve this.
+    bucket += BUCKET_LENGTH * 7000;
+    this->addTestData(bucket, BUCKET_LENGTH, 2, 0, startOffset, detector, monitor);
+    LOG_DEBUG(<< "Window is now: " << monitor.m_PruneWindow);
+    BOOST_REQUIRE_EQUAL(false, monitor.m_HasPruningStarted);
+    BOOST_REQUIRE_EQUAL(monitor.m_PruneWindowMaximum, monitor.m_PruneWindow);
+    BOOST_REQUIRE_EQUAL(model_t::E_MemoryStatusOk, monitor.m_MemoryStatus);
 }
 
 BOOST_FIXTURE_TEST_CASE(testExtraMemory, CTestFixture) {
